--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -15,6 +15,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
+    - name: Install dotnet format
+      run: dotnet tool install -g dotnet-format
+    - name: format-check
+      run: cd ./Diary-Sample && dotnet format --check --verbosity q --dry-run
     - name: Install dependencies
       run: dotnet restore
     - name: Build
