--- a/Diary-Sample/docker-compose.yml
+++ b/Diary-Sample/docker-compose.yml
@@ -4,18 +4,20 @@ services:
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: app
+      MYSQL_DATABASE: DiarySample
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       TZ: 'Asia/Tokyo'
-    #volumes:
-    # - ./docker/db/data:/var/lib/mysql
-    # - ./docker/db/sql:/docker-entrypoint-initdb.d
+    volumes:
+    #- ./docker/db/data:/var/lib/mysql
+    - ./docker/db/sql:/docker-entrypoint-initdb.d
     ports:
     - 3306:3306
+
   adminer:
     image: adminer
     restart: always
