--- a/Diary-Sample/Diary-Sample.csproj
+++ b/Diary-Sample/Diary-Sample.csproj
@@ -1,16 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Diary_Sample</RootNamespace>
     <UserSecretsId>13bb3e9b-318c-463c-86b7-e4ffbdbce271</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8"/>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.19"/>
   </ItemGroup>
-
-
-
 </Project>
