--- a/Diary-Sample/Diary-Sample.csproj
+++ b/Diary-Sample/Diary-Sample.csproj
@@ -4,9 +4,12 @@
     <RootNamespace>Diary_Sample</RootNamespace>
     <UserSecretsId>13bb3e9b-318c-463c-86b7-e4ffbdbce271</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <CodeAnalysisRuleSet>StyleCop.Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8"/>
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.19"/>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118"/>
+    <AdditionalFiles Include="stylecop.json" Link="stylecop.json"/>
   </ItemGroup>
 </Project>
