--- a/Diary-Sample/Diary-Sample.csproj
+++ b/Diary-Sample/Diary-Sample.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.19"/>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118"/>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0"/>
+    <PackageReference Include="AspNetCore.RouteAnalyzer" Version="0.5.3"/>
     <AdditionalFiles Include="stylecop.json" Link="stylecop.json"/>
   </ItemGroup>
 </Project>
