--- a/Diary-Sample-Test/Diary-Sample-Test.csproj
+++ b/Diary-Sample-Test/Diary-Sample-Test.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>Diary_Sample_Test</RootNamespace>
 
     <IsPackable>false</IsPackable>
+    <CodeAnalysisRuleSet>./../Diary-Sample/Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +14,7 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <AdditionalFiles Include="./../Diary-Sample/stylecop.json" Link="stylecop.json"/>
   </ItemGroup>
 
   <ItemGroup>
