環境変数をローカル環境の場合はDevlopment、Dockerの場合はProductionに修正

--- a/Diary-Sample/appsettings.Development.json
+++ b/Diary-Sample/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DbConnectionString": "server=localhost;port=3306;database=DiarySample;userid=user;pwd=password;sslmode=Required;"
   }
 }
