--- a/Diary-Sample/appsettings.json
+++ b/Diary-Sample/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DbConnectionString": "server=localhost;port=3306;database=DiarySample;userid=user;pwd=password;sslmode=Required;"
-  }
+  "AllowedHosts": "*"
 }
