--- a/Diary-Sample/Properties/launchSettings.json
+++ b/Diary-Sample/Properties/launchSettings.json
@@ -26,6 +26,9 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
       "useSSL": true
