--- a/e2e/package.json
+++ b/e2e/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "4.11.0"
+    "cypress": "4.11.0",
+    "reg-keygen-git-hash-plugin": "^0.10.8",
+    "reg-notify-github-plugin": "^0.10.8",
+    "reg-publish-s3-plugin": "^0.10.8",
+    "reg-suit": "^0.10.8"
   }
 }
