--- a/e2e/regconfig.json
+++ b/e2e/regconfig.json
@@ -1,7 +1,7 @@
 {
   "core": {
     "workingDir": ".reg",
-    "actualDir": "cypress/screenshots/All Specs",
+    "actualDir": "cypress/screenshots",
     "thresholdRate": 0,
     "ximgdiff": {
       "invocationType": "client"
@@ -13,7 +13,7 @@
       "clientId": "$REG_SUIT_CLIENT_ID"
     },
     "reg-publish-s3-plugin": {
-      "bucketName": "$REG_SUIT_S3_BUCKET_NAME"
+      "bucketName": "1-system-group-visual-regression-testing"
     }
   }
 }
