認証セッションをredisに登録する

--- a/Diary-Sample/appsettings.Development.json
+++ b/Diary-Sample/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnectionString": "server=localhost;port=3306;database=DiarySample;userid=user;pwd=password;sslmode=Required;"
+    "DbConnectionString": "server=localhost;port=3306;database=DiarySample;userid=user;pwd=password;sslmode=Required;",
+    "SessionConnectionString": "localhost"
   }
 }
