--- a/Diary-Sample/appsettings.Production.json
+++ b/Diary-Sample/appsettings.Production.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnectionString": "server=db;port=3306;database=DiarySample;userid=user;pwd=password;sslmode=Required;"
+    "DbConnectionString": "server=db;port=3306;database=DiarySample;userid=user;pwd=password;sslmode=Required;",
+    "SessionConnectionString": "redis"
   }
 }
