--- a/Diary-Sample/appsettings.Production.json
+++ b/Diary-Sample/appsettings.Production.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "DbConnectionString": "server=db;port=3306;database=DiarySample;userid=user;pwd=password;sslmode=Required;",
     "SessionConnectionString": "redis"
+  },
+  "JwtConfigurableOptions": {
+    "JwtKey": "1-system-group-test-jwt_key",
+    "JwtIssuer": "1-system-group-issuer",
+    "JwtAudience": "1-system-group-audience",
+    "JwtExpireDays": 14
   }
 }
