--- a/Diary-Sample/docker-compose.yml
+++ b/Diary-Sample/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
   db:
     image: mysql
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
