--- a/.github/workflows/e2e_test.yml
+++ b/.github/workflows/e2e_test.yml
@@ -10,40 +10,41 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
       REG_SUIT_CLIENT_ID: ${{ secrets.REG_SUIT_CLIENT_ID }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: db startup
-        run: docker-compose -f Diary-Sample/docker-compose.yml up -d
+        run: docker compose -f Diary-Sample/docker-compose.yml up -d
       - name: app build
         run: docker build -f Diary-Sample/Dockerfile -t diary_sample_app_1 Diary-Sample/.
       - name: app startup
         run: docker run -d --name diary_sample_app_1 --network diary-sample_default -p 80:80 diary_sample_app_1
       - name: Entity Framework Core CLI Tool install
-        run: dotnet tool install --global dotnet-ef --version 7.0.11
+        run: dotnet tool install --global dotnet-ef --version 8.0.10
       - name: Install Cypress and run tests
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v6
         with:
           working-directory: e2e
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: videos
           path: e2e/cypress/videos
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: screenshots
           path: e2e/cypress/screenshots
 
-      - name: Use Node.js v10
-        uses: actions/setup-node@v1
+      - name: Use Node.js v20
+        uses: actions/setup-node@v4
         with:
-          node-version: "10.x"
+          node-version: 20
       - name: npm install
-        run: yarn install --pure-lockfile
+        run: yarn install
         working-directory: ./e2e
         env:
           CI: true
