--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "13.7.3",
-    "reg-keygen-git-hash-plugin": "^0.10.8",
-    "reg-notify-github-plugin": "^0.14.3",
-    "reg-publish-s3-plugin": "^0.10.8",
+    "cypress": "^13.15.0",
+    "reg-keygen-git-hash-plugin": "^0.14.3",
+    "reg-notify-github-plugin": "^0.14.4",
+    "reg-publish-s3-plugin": "^0.14.4",
     "reg-suit": "^0.14.4"
   }
 }
