--- a/e2e/regconfig.json
+++ b/e2e/regconfig.json
@@ -10,7 +10,8 @@
   "plugins": {
     "reg-keygen-git-hash-plugin": true,
     "reg-notify-github-plugin": {
-      "clientId": "$REG_SUIT_CLIENT_ID"
+      "clientId": "$REG_SUIT_CLIENT_ID",
+      "setCommitStatus": false
     },
     "reg-publish-s3-plugin": {
       "bucketName": "1-system-group-visual-regression-testing"
